// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`grammar > simple fields > primitives 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "type": "num",
        "name": "numberField"
      },
      {
        "$type": "Field",
        "type": "decimal",
        "name": "decimalField"
      },
      {
        "$type": "Field",
        "type": "text",
        "name": "textField"
      },
      {
        "$type": "Field",
        "type": "bool",
        "name": "boolField"
      },
      {
        "$type": "Field",
        "type": "datetime",
        "name": "datetimeField"
      }
    ]
  }
}"
`;

exports[`grammar > syntax > comments 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "Example",
    "fields": [
      {
        "$type": "Field",
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > non-parameter annotation > multiple lines 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": {
          "$type": "Annotation",
          "name": "required"
        },
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;

exports[`grammar > validation annotations > non-parameter annotation > one line 1`] = `
"{
  "$type": "FormMLSchema",
  "form": {
    "$type": "Form",
    "name": "ExampleForm",
    "fields": [
      {
        "$type": "Field",
        "annotations": {
          "$type": "Annotation",
          "name": "required"
        },
        "type": "num",
        "name": "numberField"
      }
    ]
  }
}"
`;
